Project

General

Profile

Actions

Bug #61639

open

amqp: notifications are not retired on persistent topic

Added by Yuval Lifshitz 11 months ago. Updated 7 months ago.

Status:
Pending Backport
Priority:
High
Target version:
-
% Done:

0%

Source:
Community (user)
Tags:
notifications, amqp backport_processed
Backport:
pacific quincy reef
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

if the broker goes down, notifications are not sent when the broker recovers


Related issues 4 (3 open1 closed)

Related to rgw - Bug #62264: [ FAILED ] TestAMQP.IdleConnection (30132 ms)Pending BackportYuval Lifshitz

Actions
Copied to rgw - Backport #61918: pacific: amqp: notifications are not retired on persistent topicRejectedYuval LifshitzActions
Copied to rgw - Backport #61919: reef: amqp: notifications are not retired on persistent topicIn ProgressYuval LifshitzActions
Copied to rgw - Backport #61920: quincy: amqp: notifications are not retired on persistent topicNewYuval LifshitzActions
Actions #1

Updated by Yuval Lifshitz 11 months ago

was not able to reproduce the issue, following these steps: https://gist.github.com/yuvalif/e58e264bafe847bc5196f95be0e704a2
however, race conditions similar to the ones found in kafka may happen in amqp as well

Actions #2

Updated by J. Eric Ivancich 11 months ago

  • Assignee set to Yuval Lifshitz
Actions #3

Updated by Yuval Lifshitz 11 months ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 52110
Actions #4

Updated by Casey Bodley 11 months ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to pacific quincy reef
Actions #5

Updated by Backport Bot 11 months ago

  • Copied to Backport #61918: pacific: amqp: notifications are not retired on persistent topic added
Actions #6

Updated by Backport Bot 11 months ago

  • Copied to Backport #61919: reef: amqp: notifications are not retired on persistent topic added
Actions #7

Updated by Backport Bot 11 months ago

  • Copied to Backport #61920: quincy: amqp: notifications are not retired on persistent topic added
Actions #8

Updated by Backport Bot 11 months ago

  • Tags changed from notifications, amqp to notifications, amqp backport_processed
Actions #9

Updated by Casey Bodley 10 months ago

  • Related to Bug #62264: [ FAILED ] TestAMQP.IdleConnection (30132 ms) added
Actions #10

Updated by Casey Bodley 7 months ago

@Yuval this is a high-priority bug fix that hasn't been backported to quincy or pacific

Actions

Also available in: Atom PDF