rgw/amqp: remove possible race conditions with the amqp connections

* simplify memory management of the connection by not using a unique_ptr
* simplify the logic by handling all issues inside the amqp manager
* fix iterator invalidation issue with miltiple n/acks
* allow different connections with different exchanges
* modify the unit tests according to the new behavior

Fixes:
* https://tracker.ceph.com/issues/61639
* https://tracker.ceph.com/issues/46127

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>